fixed marker alignment on timeline and drag cursor

--- a/css/map.css
+++ b/css/map.css
@@ -32,7 +32,7 @@ ul {
 ul li.stop{
 	list-style: none;
 	padding: 0px;
-	margin-left: 20px;
+	margin-left: 30px;
 	border: solid;
 	border-width: 1px;
 	border-color: gray;
@@ -75,22 +75,22 @@ ul li.stop{
 
 .marker {
 	position: absolute;
-	left: -5px;
+	left: 5px;
 }
 
 .stop {
-	height: 30px;
+	height: 40px;
 	font-size: 11pt;
 }
 
 #stop_name {
 	padding-left: 5px;
 	position: absolute;
-	margin-top: 5px;
+	margin-top: 10px;
 }
 
 .stop .delete {
-	margin-top: 5px;
+	margin-top: 10px;
 	margin-right: 5px;
 	float: right;
 }
